--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,31 @@
+# Environment Configuration Example
+# Copy this file to .env and fill in the values
+
+# MongoDB Connection
+MONGO_URL=mongodb+srv://your_mongodb_connection_string
+
+# JWT Configuration
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+JWT_EXPIRES_IN=7
+
+# Cloudinary Configuration (for image uploads)
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+
 # Server Configuration
 PORT=5000
 NODE_ENV=production
 
-# MongoDB Atlas Connection String
-# Get this from MongoDB Atlas: Cluster → Connect → Connect your application
-# Format: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/realtime-chat?retryWrites=true&w=majority
-MONGODBURI=mongodb+srv://your-username:your-password@cluster.mongodb.net/realtime-chat?retryWrites=true&w=majority
+# Frontend URL (for CORS) - UPDATE THIS TO YOUR FRONTEND URL
+CLIENT_URL=https://realtime-chatapp-ashen-nine.vercel.app
 
-# JWT Secret - Generate a strong random string (at least 32 characters)
-# You can generate one using: openssl rand -base64 32
-JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters
+# =====================================================
+# PRODUCTION BACKEND URL (For Frontend Configuration)
+# =====================================================
+# The frontend should use this URL for API calls:
+# API_BASE_URL=https://realtime-chatapp-backend-c6sg.onrender.com
 
-# Client URL - Update this to your frontend URL after deployment
-# Example: CLIENT_URL=https://your-app.vercel.app
-CLIENT_URL=http://localhost:5173
-
-# Cloudinary Configuration - Get from https://cloudinary.com/console
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
+# Example frontend .env should have:
+# VITE_API_URL=https://realtime-chatapp-backend-c6sg.onrender.com
 
